--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <header>
-  <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">AGS Market</a>
+  <nav id="nav1" class="navbar navbar-dark navbar-expand-lg shadow-lg rounded">
+    <div class=" container-fluid fs-4 fw-bolder">
+      <a class="navbar-brand fs-3 text-shadow" href="#">AGS Market</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -9,11 +9,11 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLink="/">Home</a>
+            <a class="nav-link text-shadow" aria-current="page" routerLink="/">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-shadow" href="#" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
               Posts
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -24,10 +24,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/about">About</a>
+            <a class="nav-link text-shadow" routerLink="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" (click)="changeMode()">
+            <a class="nav-link text-shadow" (click)="changeMode()">
               <div *ngIf="this.doc.body.style.backgroundColor==this.defaultBg;else elseBlock">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-moon-stars-fill" viewBox="0 0 16 16">
@@ -50,7 +50,7 @@
         </ul>
         <div class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button id="search" class="btn btn-outline-light" routerLink="/" type="submit">Search</button>
+          <button id="search" class="btn btn-outline-dark" routerLink="/" type="submit">Search</button>
         </div>
       </div>
     </div>
