--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,22 +1,11 @@
 <div>
-  <div class="container-fluid">
-    <div class="card bg-dark text-white mt-3" style="border: none !important">
-      <div
-        style='background-image:url("https://t4.ftcdn.net/jpg/01/77/73/67/360_F_177736729_q0OyOWR0oV7d4GeUHXmwAddadTbCpL4V.jpg"); height: 220px;'
-        class="card-img"></div>
-      <div class="card-img-overlay text-center" style="color: black;">
-        <h5 class="card-title fs-2 fw-normal">AGS Market</h5>
-        <hr style="max-width: 50%;margin-left: 25%;">
-        <p class="card-text fw-light">Cloud Storage for Posts from AGS Market</p>
-
-        <p class="card-text position-absolute bottom-0 start-50 translate-middle" style="color: darkgray;">made
-          with
-          Angular 11</p>
-      </div>
+  <div class="bg-img">
+    <div class="container-custom w-100">
+      <app-nav></app-nav>
     </div>
   </div>
-  <hr>
-  <div class="container-fluid mt-3">
-    <app-post-container></app-post-container>
-  </div>
+</div>
+<hr>
+<div class="container-fluid mt-3">
+  <app-post-container></app-post-container>
 </div>
