--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav id="nav1" class="navbar navbar-dark navbar-expand-lg shadow-lg rounded">
-    <div class=" container-fluid fs-4 fw-bolder">
+    <div class="container-fluid fs-4 fw-bolder">
       <a class="navbar-brand fs-3 text-shadow" href="#">AGS Market</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,12 +9,26 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link text-shadow" aria-current="page" routerLink="/">Home</a>
+            <a class="nav-link text-shadow" aria-current="page" routerLink="/"><button
+                class="btn btn-outline-light">Home</button></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-shadow" routerLink="/about"><button class="btn btn-outline-light">About</button></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-shadow" (click)="changeMode()">
+              <div *ngIf="this.doc.body.style.backgroundColor==this.defaultBg;else elseBlock">
+                <button class="btn btn-outline-light">Dark</button>
+              </div>
+              <ng-template #elseBlock>
+                <button class="btn btn-outline-light">Light</button>
+              </ng-template>
+            </a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-shadow" href="#" id="navbarDropdown" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">
-              Posts
+              <button class="btn btn-outline-light">Posts</button>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"
@@ -23,34 +37,10 @@
               <li><a class="dropdown-item" href="#search">Find Post</a></li>
             </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-shadow" routerLink="/about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-shadow" (click)="changeMode()">
-              <div *ngIf="this.doc.body.style.backgroundColor==this.defaultBg;else elseBlock">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                  class="bi bi-moon-stars-fill" viewBox="0 0 16 16">
-                  <path
-                    d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z" />
-                  <path
-                    d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
-                </svg>
-              </div>
-              <ng-template #elseBlock>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                  class="bi bi-brightness-high-fill" viewBox="0 0 16 16">
-                  <path
-                    d="M12 8a4 4 0 1 1-8 0 4 4 0 0 1 8 0zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
-                </svg>
-
-              </ng-template>
-            </a>
-          </li>
         </ul>
         <div class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button id="search" class="btn btn-outline-dark" routerLink="/" type="submit">Search</button>
+          <button id="search" class="btn btn-light" routerLink="/" type="submit">Search</button>
         </div>
       </div>
     </div>
