title and more functions added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,9 +2,12 @@
   <div class="bg-img">
     <div class="container-custom w-100">
       <app-nav></app-nav>
+      <h3 class="main-title fw-bolder mb-5">AGS Market</h3>
+      <a href="#post-container"><button class="btn btn-lg btn-info mt-5">Get Started</button></a>
     </div>
   </div>
 </div>
+
 <hr>
 <div class="container-fluid mt-3">
   <app-post-container></app-post-container>
