--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,8 +1,8 @@
 .bg-img {
   /* The image used */
   background-image: url("https://source.unsplash.com/1600x900/?shopping");
-
-  min-height: 450px;
+  color: azure;
+  height: 550px;
 
   /* Center and scale the image nicely */
   background-position: center;
@@ -16,4 +16,20 @@
 /* Position the navbar container inside the image */
 .container-custom {
   position: absolute;
+}
+
+.main-title{
+  position: absolute;
+  text-align: center;
+  top:200px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size:7em;
+}
+
+.btn-lg{
+  position: absolute;
+  top:350px;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
