--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -1,4 +1,4 @@
-<div style="width:20em; height: 30em;min-height: 30em; margin: 10px">
+<div style="width:20em; height: 27em;min-height: 27em; margin: 10px">
   <!-- Card -->
   <div class="card hovereffect" style="border-radius: 10px;">
     <div class="" style="height: 15em;overflow: hidden;">
@@ -22,6 +22,7 @@
       <h6 class="mb-3">
         <span class="text-danger mr-1">₹{{post.price + " "}}</span>
         <span class="text-grey"><s>₹{{post.price+500}}</s></span>
+        <p class="mt-3 text-muted">Last Updated {{post.updated}}</p>
       </h6>
     </div>
   </div>
