--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -1,8 +1,8 @@
 <div style="width:18em; height: 27em;min-height: 27em; margin: 10px">
   <!-- Card -->
-  <div class="card hovereffect" style="border-radius: 10px;">
+  <div class="card border-dark text-dark hovereffect" style="border-radius: 10px;">
     <div class="" style="height: 15em;overflow: hidden;">
-      <img style="height: 15em; border-radius: 11px;" class="img-responsive w-100" [src]="post.imgPath[0]" alt="">
+      <img style="height: 15em;" class="img-responsive w-100" [src]="post.imgPath[0]" alt="">
       <div class="overlay">
         <h2>{{post.title[21]?post.title.slice(0,20)+"...":post.title}}</h2>
         <a class="info mt-5 mb-5" href="#">Explore</a>
@@ -21,7 +21,7 @@
       <hr>
       <h6 class="mb-3">
         <span class="text-danger mr-1">₹{{post.price + " "}}</span>
-        <span class="text-grey"><s>₹{{post.price+500}}</s></span>
+        <!-- <span class="text-grey"><s>₹{{post.price+500}}</s></span> -->
         <p class="mt-3 text-muted">Last Updated {{post.updated}}</p>
       </h6>
     </div>
