edit errors debugged

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,8 +7,10 @@
     </div>
   </div>
 </div>
-
+<div class="text-center">
+  <p class="fs-5 text-light mt-3 fw-bold">Showing Latest</p>
+</div>
 <hr>
-<div class="container-fluid mt-3">
+<div class="mt-5">
   <app-post-container></app-post-container>
 </div>
