--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -1,4 +1,4 @@
-<div style="width:18em; height: 27em;min-height: 27em; margin: 10px">
+<div style="width:18em; height: 27em;min-height: 27em;margin-inline: 10px;">
   <!-- Card -->
   <div class="card border-dark text-dark hovereffect" style="border-radius: 10px;">
     <div class="" style="height: 15em;overflow: hidden;">
@@ -19,8 +19,10 @@
       <p class="small text-muted text-uppercase mb-2">{{post.category}}</p>
       <p>{{post.des.slice(0,30)+"..."}}</p>
       <hr>
-      <h6 class="mb-3">
-        <span class="text-danger mr-1">₹{{post.price + " "}}</span>
+      <h6 class="mb-3 text-center">
+        <span class="text-danger mr-1 d-inline-block">
+          <p class="text-dark d-inline-block">Price:-</p> ₹{{post.price + " "}}
+        </span>
         <!-- <span class="text-grey"><s>₹{{post.price+500}}</s></span> -->
         <p class="mt-3 text-muted">Last Updated {{post.updated}}</p>
       </h6>
