--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,15 +2,15 @@
   <div class="bg-img">
     <div class="container-custom w-100">
       <app-nav></app-nav>
-      <h3 class="main-title fw-bolder mb-5">AGS Market</h3>
-      <a href="#post-container"><button class="btn btn-lg btn-info mt-5">Get Started</button></a>
+      <h3 class="main-title text-shadow text-dark fw-bolder mb-5">AGS Market</h3>
+      <a href="#post-container"><button class="btn btn-lg btn-warning mt-5"><strong>Get
+            Started</strong></button></a>
     </div>
   </div>
 </div>
-<div class="text-center">
-  <p class="fs-5 text-light mt-3 fw-bold">Showing Latest</p>
+<div class="text-center mt-2 p-1">
+  <p class="display-5 text-light mt-3"><em>Showing Latest</em></p>
 </div>
-<hr>
 <div class="mt-5">
   <app-post-container></app-post-container>
 </div>
