--- a/src/app/nav/post-form/post-form.component.html
+++ b/src/app/nav/post-form/post-form.component.html
@@ -66,6 +66,9 @@
               <option value="Headsets/Earbuds">Headsets/Earbuds</option>
               <option value="Mobile Accessories">Mobile Accessories</option>
               <option value="Household">Household</option>
+              <option value="Bags">Bags</option>
+              <option value="Foot Wear">Foot Wear</option>
+              <option value="Bedsheets">Bedsheets</option>
             </select>
           </div>
           <div *ngIf="postCreationStatus=='success' && this.postService.selectedPostToEdit==null"
