--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 .bg-img {
   /* The image used */
-  background-image: url("https://source.unsplash.com/1600x900/?shopping");
+  background-image: url("https://freerangestock.com/sample/51042/business-meeting-and-teamwork--large-team-at-the-table.jpg");
   color: azure;
   height: 550px;
 
@@ -16,6 +16,10 @@
 /* Position the navbar container inside the image */
 .container-custom {
   position: absolute;
+}
+
+.text-shadow{
+  text-shadow: 1px 1px 0px #d3d2d2;
 }
 
 .main-title{
