--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <div class="bg-img">
     <div class="container-custom w-100">
       <app-nav></app-nav>
-      <h3 class="main-title text-shadow text-dark fw-bolder mb-5">AGS Market</h3>
+      <h1 class="main-title h1 text-shadow text-light mb-5">AGS Market</h1>
       <a href="#post-container"><button class="btn btn-lg btn-warning mt-5"><strong>Get
             Started</strong></button></a>
     </div>
