--- a/src/app/dashboard/post-container/post-container.component.html
+++ b/src/app/dashboard/post-container/post-container.component.html
@@ -1,12 +1,14 @@
 <div *ngFor="let category of this.PostService.categories()">
-  <div class="text-center" *ngIf="filterCategory(category).length>0">
+  <div class="text-center">
     <div class="text-center mb-2 p-1">
       <p class="display-5 text-light text-decoration-underline"><em>{{category}}</em></p>
     </div>
-    <div id="post-container" *ngFor="let post of filterCategory(category)" class="card-group mb-3"
+    <div id="post-container" *ngFor="let post of postsArr" class="card-group mb-3"
       style="overflow: hidden;display:inline-block">
       <app-specific-post [post]="post"></app-specific-post>
       <hr style="color: white;">
     </div>
   </div>
 </div>
+
+<!-- *ngIf="filterCategory(category).length>0" -->
