--- a/src/app/dashboard/post-container/post-container.component.html
+++ b/src/app/dashboard/post-container/post-container.component.html
@@ -1,11 +1,13 @@
-<div *ngFor="let category of this.PostService.categories()">
-  <div class="text-center">
+<div *ngFor="let category of categories">
+  <div class="text-center" *ngIf="filterCategories(category,postsArr)">
     <div class="text-center mb-2 p-1">
       <p class="display-5 text-light text-decoration-underline"><em>{{category}}</em></p>
     </div>
     <div id="post-container" *ngFor="let post of postsArr" class="card-group mb-3"
       style="overflow: hidden;display:inline-block">
-      <app-specific-post [post]="post"></app-specific-post>
+      <div *ngIf="post.category===category">
+        <app-specific-post [post]="post"></app-specific-post>
+      </div>
       <hr style="color: white;">
     </div>
   </div>
