--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
     style="opacity: 0.9;">
     <div class="container-fluid fs-4 fw-bolder">
       <a class="navbar-brand fs-3 text-shadow text-light" href="#">AGS Market</a>
-      <button class="navbar-toggler" (click)="hideTitle()" type="button" data-bs-toggle="collapse"
+      <button class="navbar-toggler" (click)="hideTitle(true,false)" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
         aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
               data-bs-toggle="dropdown" aria-expanded="false">
               <button class="btn btn-outline-light">Posts</button>
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <ul class="dropdown-menu" style="position:absolute;overflow:visible;" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"
                   (click)="this.postService.emptyUploadForm()">Upload</a>
               </li>
