--- a/src/app/nav/post-form/post-form.component.html
+++ b/src/app/nav/post-form/post-form.component.html
@@ -47,6 +47,17 @@
               type="number" class="form-control" aria-label="Sizing example input"
               aria-describedby="inputGroup-sizing-default">
           </div>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <label class="input-group-text" for="inputGroupSelect01">Shipping</label>
+            </div>
+            <select class="form-select"
+              [ngModel]="this.postService.selectedPostToEdit?this.postService.selectedPostToEdit?.freeShip:undefined"
+              id="freeShipInp" name="freeShipInp" aria-label="Default select example" required>
+              <option value="false">Shipping Extra</option>
+              <option value="true">Free Shipping</option>
+            </select>
+          </div>
           <div class="input-group">
             <span class="input-group-text">Description</span>
             <textarea id="des" type="text" class="form-control" name="desInp"
