--- a/src/app/nav/post-form/post-form.component.css
+++ b/src/app/nav/post-form/post-form.component.css
@@ -2,3 +2,7 @@
   max-height: calc(100vh - 200px);
   overflow-y: auto;
 }
+
+/* .form-control, .form-select{
+  box-shadow: 0px 2px rgb(253, 140, 140);
+} */
