--- a/src/app/dashboard/post-container/post-container.component.html
+++ b/src/app/dashboard/post-container/post-container.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let category of categories">
   <div class="text-center" *ngIf="filterCategories(category,postsArr)">
     <div class="text-center mb-2 p-1">
-      <p id="categories" class="display-5 text-light text-decoration-underline"><em>{{category}}</em></p>
+      <p id="{{category}}" class="display-5 text-light text-decoration-underline"><em>{{category}}</em></p>
     </div>
     <div id="post-container" *ngFor="let post of postsArr" class="card-group mb-3"
       style="overflow: hidden;display:inline-block">
