--- a/src/app/dashboard/post-container/specific-post/specific-post.component.css
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.css
@@ -18,7 +18,7 @@
   top:0;
   left:0;
   opacity:0;
-  background-color:rgba(0,0,0,0.5);
+  background-color:rgba(126, 121, 121, 0.5);
   -webkit-transition:all .4s ease-in-out;
   transition:all .4s ease-in-out
   }
