--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -1,11 +1,13 @@
 <div style="width:18em; height: 27em;min-height: 27em;margin-inline: 10px;">
   <div class="card border-dark text-dark hovereffect" style="border-radius: 10px;">
-    <div class="" style="height: 15em;overflow: hidden;">
-      <img style="height: 15em;" class="img-responsive w-100" [src]="post.imgPath[0]" alt="">
+    <div style="height: 13em;overflow: hidden;min-height: 13em;">
+      <img [src]="post.imgPath[0]" class="w-100 h-100 rounded" style="object-fit: cover;" alt="Error Loading Image">
       <div class="overlay">
         <h2>{{post.title[21]?post.title.slice(0,20)+"...":post.title}}</h2>
-        <a class="info mt-5 mb-5" href="#">Explore</a>
-        <hr>
+        <a class="mt-5 mb-5 info" routerLink="/product/{{post.id}}">
+          View Post
+        </a>
+        <hr style="clear: both;visibility: hidden;">
         <button class="btn btn-primary btn-sm info" style="margin-right: 5px;" data-bs-toggle="modal"
           data-bs-target="#exampleModal" (click)="selectedPost(post)">Edit</button>
         <button class="btn btn-danger btn-sm info" style="margin-left: 5px;"
@@ -15,7 +17,7 @@
     <div class="card-body text-center">
       <h5>{{post.title[21]?post.title.slice(0,20)+"...":post.title}}</h5>
       <p class="small text-muted text-uppercase mb-2">{{post.category}}</p>
-      <p>{{post.des[31]?post.des.slice(0,30)+"...":post.des}}</p>
+      <p>{{post.des[26]?post.des.slice(0,25)+"...":post.des}}</p>
       <hr>
       <h6 class="mb-3 text-center">
         <span class="text-danger mr-1 d-inline-block">
@@ -24,23 +26,6 @@
         </span>
         <p class="text-muted">Last Updated {{post.updated}}</p>
       </h6>
-    </div>
-  </div>
-</div>
-<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Delete Post</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body text-center">
-        <p class="fw-normal">Are you sure you want to delete this post ?</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Abort</button>
-        <button type="button" class="btn btn-danger">Delete</button>
-      </div>
     </div>
   </div>
 </div>
