--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -14,21 +14,34 @@
             <a class="nav-link text-shadow" aria-current="page" routerLink="/"><button
                 class="btn btn-outline-light">Home</button></a>
           </li>
-          <li class=" nav-item">
+          <li class="nav-item">
             <a class="nav-link text-shadow" routerLink="/about"><button class="btn btn-outline-light">About</button></a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-shadow" href="#" id="navbarDropdown" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">
-              <button class="btn btn-outline-light">Posts</button>
+            <a class="nav-link text-shadow" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <button class="btn btn-outline-light dropdown-toggle">Posts</button>
             </a>
-            <ul class="dropdown-menu" style="position:absolute;overflow:visible;" aria-labelledby="navbarDropdown">
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"
                   (click)="this.postService.emptyUploadForm()">Upload</a>
               </li>
               <li><a class="dropdown-item" href="#search">Find Post</a></li>
             </ul>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <button class="btn btn-outline-light dropdown-toggle">Categories</button>
+            </a>
+            <ul class="dropdown-menu bg-dark" style="width: 500px;" aria-labelledby="navbarDropdown">
+              <div *ngFor="let category of this.postService.categories()">
+                <a href="#{{category}}"><button
+                    class="btn btn-sm m-1 btn-outline-light float-start">{{category}}</button></a>
+              </div>
+            </ul>
+          </li>
+
         </ul>
         <div class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
