--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -26,7 +26,7 @@
           <div class="ratings d-flex flex-row align-items-center">
             <div class="d-flex flex-row"> <i class='bx bxs-star'></i> <i class='bx bxs-star'></i> <i
                 class='bx bxs-star'></i> <i class='bx bxs-star'></i> <i class='bx bx-star'></i> </div>
-            <span>{{post.freeShip}}</span>
+            <span>{{post.freeShip?'Free Shipping':'Shipping Extra'}}</span>
           </div>
           <div class="mt-5"> <span class="fw-bold">Color</span>
             <div class="colors">
