--- a/src/app/scroll-to-top/scroll-to-top.component.html
+++ b/src/app/scroll-to-top/scroll-to-top.component.html
@@ -1,5 +1,5 @@
 <div class="scroll-to-top" [ngClass]="{'show-scrollTop': windowScrolled}">
-  <button type="button" class="btn btn-warning" data-toggle="button" aria-pressed="true" (click)="scrollToTop()">
+  <button type="button" class="btn btn-warning btn-sm" data-toggle="button" aria-pressed="true" (click)="scrollToTop()">
     <strong>
 
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up-fill"
