--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -44,8 +44,10 @@
 
         </ul>
         <div class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" id="searchInp" aria-label="Search">
-          <button id="search" class="btn btn-outline-light" routerLink="/search/:query" type="submit">Search</button>
+          <input class="form-control me-2" type="search" placeholder="Search" (change)="change()" id="searchInp"
+            aria-label="Search">
+          <button id="search" routerLink="/search/{{this.query}}" class="btn btn-outline-light"
+            type="button">Search</button>
         </div>
       </div>
     </div>
