--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -46,7 +46,7 @@
         <div class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" (change)="change()" id="searchInp"
             aria-label="Search">
-          <button id="search" routerLink="/search/{{this.query}}" class="btn btn-outline-light"
+          <button id="search" (click)="submitQuery(this.query)" class="btn btn-outline-light"
             type="button">Search</button>
         </div>
       </div>
