--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -5,11 +5,11 @@
     <div class="row g-0">
       <div class="col-md-6 border-end">
         <div class="d-flex flex-column justify-content-center">
-          <div class="main_image"> <img src="{{post.imgPath[0]}}" id="main_product_image" width="350">
+          <div class="main_image"> <img src="{{post?.imgPath[0]}}" id="main_product_image" width="350">
           </div>
           <div class="thumbnail_images">
             <ul id="thumbnail">
-              <li *ngFor="let img of post.imgPath"><img onclick="changeImage(this)" [src]="img" width="70"></li>
+              <li *ngFor="let img of post?.imgPath"><img [src]="img" width="70"></li>
             </ul>
           </div>
         </div>
