--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -1,7 +1,8 @@
 <div style="width:18em; height: 27em;min-height: 27em;margin-inline: 10px;">
   <div class="card border-dark text-dark hovereffect" style="border-radius: 10px;">
     <div style="height: 13em;overflow: hidden;min-height: 13em;">
-      <img [src]="post.imgPath[0]" class="w-100 h-100 rounded" style="object-fit: cover;" alt="Error Loading Image">
+      <img routerLink="/product/{{post.id}}" [src]="post.imgPath[0]" class="w-100 h-100 rounded"
+        style="object-fit: cover;" alt="Error Loading Image">
       <div class="overlay">
         <h2>{{post.title[21]?post.title.slice(0,20)+"...":post.title}}</h2>
         <a class="mt-5 mb-5 info" routerLink="/product/{{post.id}}">
@@ -14,7 +15,7 @@
           (click)="deleteThisPost(post.id)">Delete</button>
       </div>
     </div>
-    <div class="card-body text-center">
+    <div routerLink="/product/{{post.id}}" class="card-body text-center">
       <h5>{{post.title[21]?post.title.slice(0,20)+"...":post.title}}</h5>
       <p class="small text-muted text-uppercase mb-2">{{post.category}}</p>
       <p>{{post.des[26]?post.des.slice(0,25)+"...":post.des}}</p>
